--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@vueuse/nuxt": "^10.11.0",
     "nuxt-primevue": "^3.0.0"
   }
 }
